feat: 캐시 적용
close #13